--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,6 @@
 <head>
 <title>Hel222222lo World</title>
-</hhange the <title> AND <h> to Hello World Version 2
-
-	git commit -am "v2 Updating home page"
-	git push
+</hhange the <title> AND <h> ABCS
 <div class="info">
 <h>Hello World!</h>
 <p><span>Server&nbsp;address:</span> <span>server_address</span></p>
